# enum-tools

./: Cargo.toml  ChangeLog.md  README.md  check.sh
.github/workflows/: ci.yml  scheduled.yml  test.yml
src/: lib.rs
src/feature/: as_str_fn.rs  debug_trait.rs  display_trait.rs  from_str_fn.rs  from_str_trait.rs  into_fn.rs  into_str_trait.rs  into_trait.rs  max_const.rs  min_const.rs  mod.rs  names.rs  next_back_fn.rs  next_fn.rs  range_fn.rs  sorted.rs  table_enum.rs  table_name.rs  table_range.rs  try_from_fn.rs  try_from_trait.rs
src/generator/: features.rs  mod.rs  names.rs
src/parser/: attr.rs  error.rs  feature.rs  mod.rs  params.rs  values.rs
tests/: all.rs  as_str_fn_match.rs  as_str_fn_table.rs  compile-fail.rs  debug_trait.rs  display_trait.rs  from_str_fn_match.rs  from_str_fn_table.rs  from_str_trait_match.rs  from_str_trait_table.rs  into_fn.rs  into_str_trait.rs  into_trait.rs  iter_names.rs  iter_next_and_back.rs  iter_range.rs  iter_table.rs  iter_table_inline.rs  manual_vis_crate.rs  min_max.rs  next.rs  next_back.rs  range_next_and_back.rs  range_range.rs  range_table.rs  try_from_fn.rs  try_from_trait.rs
tests/compile-fail/: duplicate_feature.rs  duplicate_feature.stderr  duplicate_parameter.rs  duplicate_parameter.stderr  duplicate_repr_attribute.rs  duplicate_repr_attribute.stderr  duplicate_value.rs  duplicate_value.stderr  expected_literal.rs  expected_literal.stderr  fields_not_name_sorted.rs  fields_not_name_sorted.stderr  fields_not_value_sorted.rs  fields_not_value_sorted.stderr  i64_overflow.rs  i64_overflow.stderr  missing_repr_attribute.rs  missing_repr_attribute.stderr  no_enum.rs  no_enum.stderr  no_i64.rs  no_i64.stderr  no_variants_found.rs  no_variants_found.stderr  not_integer.rs  not_integer.stderr  only_unit_field.rs  only_unit_field.stderr  unexpected_literal.rs  unknown_feature.rs  (+10 more)
(+6 files in other folders)
