[package]
name = "enum-tools"
version = "0.5.0"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Automatically derive functions and trait implementations for enums"
repository = "https://github.com/alexkazik/enum-tools"
license = "MIT"
keywords = ["enum", "derive", "primitive"]
categories = ["rust-patterns"]
exclude = ["/.github"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "1.0"
