[package]
name = "enum-tools"
version = "0.5.5"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2021"
description = "Automatically derive functions and trait implementations for enums"
repository = "https://github.com/alexkazik/enum-tools"
license = "MIT"
keywords = ["enum", "derive", "primitive"]
categories = ["rust-patterns"]
readme = "README.md"
exclude = ["/.github"]
rust-version = "1.58.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
proc-macro-error = { version = "1.0.4", default-features = false }
quote = "1.0.26"
syn = { version = "2.0.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }
rustc_version = "0.4.1"
